Update and rename home.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-{% load static %}
-
 <!DOCTYPE html>
 <html>
   <head>
     <title>Personal Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
-    <link href="{% static 'css/home.css' %}" rel="stylesheet">
+    <link href="https://raw.githubusercontent.com/tsadarsh/tsadarsh.github.io/master/home.css" rel="stylesheet">
   </head>
   <body>
     <nav id="navbar">
