Apply meta tags

--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About tsadarsh</title>
+    <!-- Primary Meta Tags -->
+    <title>tsadarsh - Adarsh TS (software developer)</title>
+    <meta name="title" content="tsadarsh - Adarsh TS (software developer)">
+    <meta name="description" content="Passionate geek ">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tsadarsh.github.io/">
+    <meta property="og:title" content="tsadarsh - Adarsh TS (software developer)">
+    <meta property="og:description" content="Passionate geek ">
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://tsadarsh.github.io/">
+    <meta property="twitter:title" content="tsadarsh - Adarsh TS (software developer)">
+    <meta property="twitter:description" content="Passionate geek ">
+    <meta property="twitter:image" content="">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> 
