Update meta tags to include image

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <meta property="og:url" content="https://tsadarsh.github.io/">
     <meta property="og:title" content="tsadarsh - Adarsh TS (software developer)">
     <meta property="og:description" content="Passionate geek ">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://github.com/tsadarsh/tsadarsh.github.io/blob/e767aaba4c1d1e0b3f7ff2e47e92df32086849e8/Adarsh%20ts.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://tsadarsh.github.io/">
     <meta property="twitter:title" content="tsadarsh - Adarsh TS (software developer)">
     <meta property="twitter:description" content="Passionate geek ">
-    <meta property="twitter:image" content="">
+    <meta property="twitter:image" content="https://github.com/tsadarsh/tsadarsh.github.io/blob/e767aaba4c1d1e0b3f7ff2e47e92df32086849e8/Adarsh%20ts.png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
