--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <footer>
         <a href="https://github.com/tsadarsh" target="_blank"><img src="https://img.icons8.com/material-outlined/24/000000/github.png"/></a>
         <a href="https://www.linkedin.com/in/tsadarsh/" target="_blank"><img src="https://img.icons8.com/material-outlined/24/000000/linkedin.png"/></a>
-        <a href="" target="_blank"><img src="https://img.icons8.com/material-outlined/24/000000/instagram-new.png"/></a>
+        <a href="https://www.instagram.com/tsadarsh_me/" target="_blank"><img src="https://img.icons8.com/material-outlined/24/000000/instagram-new.png"/></a>
       </footer>
     </main>
   </body>
